qr/assets/css/main.css
.body{
    background: #ffffff url('../images/background.png') no-repeat center;
    /* background-color: #000; */
}

.background-image {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 1;
    display: block;
    background-image: url("https://hancoffee.rs/qr/assets/images/bg3-min.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 100%;
    -webkit-filter: blur(2px);
    -moz-filter: blur(px);
    -o-filter: blur(3px);
    -ms-filter: blur(3px);
    filter: blur(3px);
  }

.navbar {
    background-color: rgba(19, 51, 35, 0.8);
    /* background-color: #133323; */
    display: flex;
    justify-content: center;
    position: fixed;
    z-index: 500;
    width: 100%;
    top: 0;
    right: 0;
    left: 0;
}

.navbar img{
    width: 100px;
    padding-top: 10px;
    padding-bottom: 10px;
}


.content {
    position: fixed;
    left: 0;
    right: 0;
    z-index: 9999;
    margin-left: 20px;
    margin-right: 20px;
  }
.top{
    display: flex;
    height: 20vh;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
    vertical-align: middle;
    padding-top: 20vh;
}



.bottom{
    display: flex;
    height: 20vh;
    text-align: center;
    vertical-align: middle;
    margin: 0px;
    justify-content: center;
    align-content: center;
    flex-direction: column;
}
.bottom-text{
  /* background-color: hsla(130, 46%, 29%, 0.4); */
  width: 100%;
  margin-top: 20px;
  vertical-align: bottom;
  position: fixed;
  bottom: 0;
  left: 0;
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 0.5s;
  animation-name: animatetop;
  animation-duration: 0.5s;
}

.bottom-btns{
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
}

.bottom-btns a{
  display: contents;
  align-items: center;
}

.bi{
  margin-left: 50px;
  margin-right: 50px;
  padding: 10px;
  color: #fff;
  background-color: rgba(19, 51, 35, 0.8);
  font-size: 45px;
  cursor: pointer;
  border-radius: 10px;
  transition: all 0.3s ease 0s;
}

.bi:hover {
  background-color: #8ac895;
  box-shadow: 0px 15px 20px rgba(28, 142, 100, 0.4);
  color: #fff;
  transform: translateY(-10px);
}



.btn{
    min-width: 160px;
    border: none;
    color: #fff;
    background-color: rgba(19, 51, 35, 0.8);
    padding: 15px 15px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 24px;
    font-family: 'Poppins', sans-serif;
    border: none;
     border-radius: 10px; 
    box-shadow: 0px 10px 20px rgb(0 0 0 / 50%);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
    text-transform: uppercase;
    letter-spacing: 3px;
}


.btn:hover {
  background-color: #8ac895;
  box-shadow: 0px 15px 20px rgba(28, 142, 100, 0.4);
  color: #fff;
  transform: translateY(-10px);
}

.btn2{
    background-color: #8ac895; /* Green */
    border: none;
    color: white;
    padding: 20px 50px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 18px;
    font-family: 'Poppins', sans-serif;
}

h2{
    color: white;
    font-size: 25px;
    font-family: 'Poppins', sans-serif;    
}

#loader{
	position: fixed;
	width: 100%;
	height: 100vh;
	background: #000000 url('giphy.gif') no-repeat center;
  background-size: 60vh;
	z-index: 999;
  animation: fadeOut 0.6s forwards;
  animation-delay: 1.8s;
  -webkit-animation: fadeOut 0.6s forwards;
  -webkit-animation-delay: 1.8s;
  
}
@-webkit-keyframes fadeOut {
  from {opacity:1 } 
  to {opacity:0 }
}

@keyframes fadeOut { 
  from{opacity:1 } 
  to{opacity:0 }
}

/* 
#loader {
    position: absolute;
    left: 50%;
    top: 50%;
    z-index: 1;
    width: 120px;
    height: 120px;
    margin: -76px 0 0 -76px;
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #3498db;
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
  }
  
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }
   */
  /* Add animation to "page content" */
  .bg {
    position: relative;
    -webkit-animation-name: animatebottom;
    -webkit-animation-duration: 0.5s;
    animation-name: animatebottom;
    animation-duration: 0.5s
  }
  
  @-webkit-keyframes animatebottom {
    from { bottom:-20px; opacity:0 } 
    to { bottom:0px; opacity:1 }
  }
  
  @keyframes animatebottom { 
    from{ bottom:-20px; opacity:0 } 
    to{ bottom:0; opacity:1 }
  }

  .navbar{
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.5s;
    animation-name: animatetop;
    animation-duration: 0.5s
  }

  @-webkit-keyframes animatetop {
    from { opacity:0 } 
    to { opacity:1 }
  }
  
  @keyframes animatetop { 
    from{ opacity:0 } 
    to{ opacity:1 }
  }


  .video-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: #000;
  }

  .video-container video {
    min-width: 100%;
    min-height: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    object-fit:cover;
  }

  .video-container:after {
    content: '';
    z-index: 0;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.4);
    position: absolute;
  }

  .bg-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: none;
  }
  

  .comingsoon {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 12rem;
    color: rgba(5, 5, 5, 0.3);
    text-align: center;
    /*text-shadow: 2px 2px 4px #000000;
    /* Center the text horizontally and vertically */

    display: flex;
    align-items: center;
    justify-content: center;
    font-family: 'Golos Text', sans-serif;
    animation: fadeIn 2.0s;
  }

  .logo img{
    width: 120px;
    position: absolute;
    top: 5%;
    left: 50%;
    transform: translate(-45%, -5%);
    opacity: 0.5;
    animation: fadeIn 2.0s;
  }
  @keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 0.5; }
  }

  @media only screen and (max-width: 1000px) {
    .comingsoon{
      font-size: 5rem;
    }
    #loader{
      /* position: fixed; */
      width: 100%;
      height: 80vh;
    }
    .bi{
      margin-left: 0px;
      margin-right: 0px;
    }
    .bottom-btns{
      justify-content: space-evenly;
    }
  }

  @media (max-width: 767px) {
    .video-container .video {
      display: none;
    }
    .video-container .bg-image {
      display: block;
    }
  }

